fixed the body changing sizes too much

--- a/src/pages/Bookshelf/bookshelf.css
+++ b/src/pages/Bookshelf/bookshelf.css
@@ -1,6 +1,15 @@
-body{
-    background-color: #E8DED1;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-}
+.back{
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+  }
+  
+  
+  .body{
+      background-color: #E8DED1;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+      width: 1050px;
+      display: inline-block; 
+  }
