--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,9 +1,20 @@
-body{
+.back{
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+}
+
+
+.body{
     background-color: #E8DED1;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    width: 1050px;
+    display: inline-block; 
 }
+
+
 .textbox{
     /* border: 3px solid rgb(69, 45, 16) ; */
     /* margin: auto; */
@@ -26,10 +37,15 @@ body{
   .text{
     font-size: 30px;
     color: rgb(69, 45, 16);
-    /* padding: 10px; */
+    padding: 30px;
+    text-align: right;
   }
   h1{
-    text-align: left;
+    text-align: center;
     /* padding: 0px 40px; */
+  }
+  p{
+    text-align: center;
+
   }
   
